WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57919
MediaPlayerPrivateAVFoundation does not change rate due to setRate().
https://bugs.webkit.org/show_bug.cgi?id=57919
Summary
MediaPlayerPrivateAVFoundation does not change rate due to setRate().
Jer Noble
Reported
2011-04-05 22:15:04 PDT
When calling video.rate=2, (and thus MediaPlayer->setRate(2)), MediaPlayerPrivateAVFoundation never acts upon the new rate.
Attachments
Patch
(6.81 KB, patch)
2011-04-05 23:10 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-04-05 22:15:44 PDT
<
rdar://problem/9207547
>
Jer Noble
Comment 2
2011-04-05 23:10:38 PDT
Created
attachment 88373
[details]
Patch
WebKit Commit Bot
Comment 3
2011-04-06 20:32:14 PDT
Comment on
attachment 88373
[details]
Patch Clearing flags on attachment: 88373 Committed
r83134
: <
http://trac.webkit.org/changeset/83134
>
WebKit Commit Bot
Comment 4
2011-04-06 20:32:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug